--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <title>Home</title>
-        
-         <link rel="stylesheet"
+        <link rel="icon" href="images/blackCoffee.png">
+        <link rel="stylesheet"
         type="text/css"
         href="style.css">
         
